--- a/index.html
+++ b/index.html
@@ -6,10 +6,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="icon/iconfont.css">
 </head>
 
 <body>
-    <div class="wrap"></div>
+    <script>
+        document.documentElement.style.fontSize = window.innerWidth / 750 * 100 + 'px';
+    </script>
+    <div class="wrap">
+        <div class="header">
+            <a href="javascript:;">
+                <i class="iconfont">&#xe653;</i>
+            </a>
+            <a href="javascript:;">我的</a>
+            <a href="javascript:;"></a>
+        </div>
+        <div class="con">
+            <div class="top">
+                <i class="iconfont">&#xe627;</i>
+                <p class="p">请点击登录您的小米账号</p>
+            </div>
+            <div class="bottom">
+                <ul>
+                    <li>
+                        <i class="iconfont">&#xe62a;</i>
+                        <a href="javascript:;">播放历史</a>
+                        <i class="iconfont a">&#xe6e1;</i>
+                    </li>
+                    <li>
+                        <i class="iconfont">&#xe62a;</i>
+                        <a href="javascript:;">我的收藏</a>
+                        <i class="iconfont a">&#xe6e1;</i>
+                    </li>
+                    <li>
+                        <i class="iconfont">&#xe62a;</i>
+                        <a href="javascript:;">已安装应用</a>
+                        <i class="iconfont a">&#xe6e1;</i>
+                    </li>
+                    <li>
+                        <i class="iconfont">&#xe62a;</i>
+                        <a href="javascript:;">设置</a>
+                        <i class="iconfont a">&#xe6e1;</i>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer">
+
+        </div>
+    </div>
 </body>
 
 </html>
